--- a/test/Nerdbank.NetStandardBridge.Tests/Nerdbank.NetStandardBridge.Tests.csproj
+++ b/test/Nerdbank.NetStandardBridge.Tests/Nerdbank.NetStandardBridge.Tests.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Validation" ExcludeAssets="compile;runtime" GeneratePathProperty="true" />
-    <PackageReference Include="Microsoft.CodeCoverage" />
+    <PackageReference Include="Microsoft.CodeCoverage" Condition="'$(TargetFramework)'!='net45'" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit.runner.visualstudio" />
     <PackageReference Include="xunit" />
