--- a/src/Nerdbank.NetStandardBridge/Nerdbank.NetStandardBridge.csproj
+++ b/src/Nerdbank.NetStandardBridge/Nerdbank.NetStandardBridge.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IsExternalInit" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" PrivateAssets="all" />
   </ItemGroup>
 
